--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		
+        <label for="text">Name</label>
+		<input type="text" required  placeholder="Name"><br><br>
+
+		<label for="email">Email</label>
+		<input type="email" required placeholder="Email"><br><br>
+
+		<label for="gender">Gender</label>
+		<input type="radio" required ><br><br>
+
+		<label for="carBrands"> Car Brands</label>
+		<input type="select" required id="cars" placeholder="--Please choose an option--"><br><br>
+
+		<label for="age">Age</label>
+		<input type="number" required id="age" placeholder="Age"><br><br>
+
+		<label for="dob">DOB</label>
+		<input type="date" required id="dob"><br><br>
+
+		<label for="phoneNo">Phone Number</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx"><br><br>
+
+		<label for="pssword">Password</label>
+		<input type="password" id="password" required placeholder="Password"><br><br>
+
+		<label for="checkbox">I agree to the TOS</label>
+		<input type="checkbox" required id="tos">
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
