--- a/main.html
+++ b/main.html
@@ -10,18 +10,19 @@
 	<!-- the entire body must be written by student -->
 	<form action="/submit" method="post">
 		
-        <label for="name">Name</label>
+        <label for="name">Name:</label>
 		<input type="text" required id="name" placeholder="Name"><br><br>
 
-		<label for="email">Email</label>
+		<label for="email">Email:</label>
 		<input type="email" required id="email" placeholder="Email"><br><br>
 
+		<label for="Gender">Gender:</label>
 		<label for="gender_m">M</label>
 		<input type="radio" name="gender" required id="gender_m">
 		<label for="gender_f">F</label>
 		<input type="radio" name="gender" required id="gender_f"><br><br>
 
-		<label for="cars"> Car Brands</label>
+		<label for="cars"> Car Brands:</label>
 		<select required id="cars">
 		<option>--Please choose an option</option>
 		<option>BMW</option>
@@ -30,16 +31,16 @@
 		</select><br><br>
 		
 
-		<label for="age">Age</label>
+		<label for="age">Age:</label>
 		<input type="number" required id="age" placeholder="Age"><br><br>
 
-		<label for="dob">DOB</label>
+		<label for="dob">DOB:</label>
 		<input type="date" required id="dob"><br><br>
 
-		<label for="tel">Phone Number</label>
+		<label for="tel">Phone Numbe:r</label>
 		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx"><br><br>
 
-		<label for="pssword">Password</label>
+		<label for="pssword">Password:</label>
 		<input type="password" id="password" required placeholder="Password"><br><br>
 
 		<label for="tos">I agree to the TOS</label>
