--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<label for="email">Email:</label>
 		<input type="email" required id="email" placeholder="Email"><br><br>
 
-		<label for="Gender">Gender:</label>
+		<label>Gender:</label>
 		<label for="gender_m">M</label>
 		<input type="radio" name="gender" required id="gender_m">
 		<label for="gender_f">F</label>
@@ -24,9 +24,9 @@
 
 		<label for="cars"> Car Brands:</label>
 		<select required id="cars">
-		<option>--Please choose an option</option>
+		<option>--Please choose an option--</option>
 		<option>BMW</option>
-		<option>Shwift</option>
+		<option>Swift</option>
 		<option>Maruti</option>
 		</select><br><br>
 		
@@ -37,8 +37,8 @@
 		<label for="dob">DOB:</label>
 		<input type="date" required id="dob"><br><br>
 
-		<label for="tel">Phone Numbe:r</label>
-		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx"><br><br>
+		<label for="tel">Phone Number:</label>
+		<input type="tel" id="tel"><br><br>
 
 		<label for="pssword">Password:</label>
 		<input type="password" id="password" required placeholder="Password"><br><br>
