--- a/main.html
+++ b/main.html
@@ -11,16 +11,16 @@
 	<form action="/submit" method="post">
 		
         <label for="name">Name:</label>
-		<input type="text" required id="name" placeholder="Name"><br><br>
+		<input type="text" required id="name" placeholder="Name"><br>
 
 		<label for="email">Email:</label>
-		<input type="email" required id="email" placeholder="Email"><br><br>
+		<input type="email" required id="email" placeholder="Email"><br>
 
 		<label>Gender:</label>
 		<label for="gender_m">M</label>
 		<input type="radio" name="gender" required id="gender_m">
 		<label for="gender_f">F</label>
-		<input type="radio" name="gender" required id="gender_f"><br><br>
+		<input type="radio" name="gender" required id="gender_f"><br>
 
 		<label for="cars"> Car Brands:</label>
 		<select required id="cars">
@@ -28,23 +28,23 @@
 		<option>BMW</option>
 		<option>Swift</option>
 		<option>Maruti</option>
-		</select><br><br>
+		</select><br>
 		
 
 		<label for="age">Age:</label>
-		<input type="number" required id="age" placeholder="Age"><br><br>
+		<input type="number" required id="age" placeholder="Age"><br>
 
 		<label for="dob">DOB:</label>
-		<input type="date" required id="dob"><br><br>
+		<input type="date" required id="dob"><br>
 
 		<label for="tel">Phone Number:</label>
-		<input type="tel" id="tel"><br><br>
+		<input type="tel" id="tel"><br>
 
 		<label for="pssword">Password:</label>
-		<input type="password" id="password" required placeholder="Password"><br><br>
+		<input type="password" id="password" required placeholder="Password"><br>
 
 		<label for="tos">I agree to the TOS</label>
-		<input type="checkbox" required id="tos"><br><br>
+		<input type="checkbox" required id="tos"><br>
 
 		<button type="submit">Submit</button>
 		
