--- a/main.html
+++ b/main.html
@@ -8,47 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="/submit" method="post">
-		
+	 <form action="/submit" method="post">
+		 
         <label for="name">Name:</label>
-		<input type="text" required id="name" placeholder="Name"><br>
+        <input type="text" id="name" name="name" required placeholder="Name"><br>
 
-		<label for="email">Email:</label>
-		<input type="email" required id="email" placeholder="Email"><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required placeholder="Email"><br>
 
-		<label>Gender:</label>
-		<label for="gender_m">M</label>
-		<input type="radio" name="gender" required id="gender_m">
-		<label for="gender_f">F</label>
-		<input type="radio" name="gender" required id="gender_f"><br>
+        <label>Gender:</label>
+        <label for="gender_m">M</label>
+        <input type="radio" id="gender_m" name="gender" required>
+        <label for="gender_f">F</label>
+        <input type="radio" id="gender_f" name="gender" required><br>
 
-		<label for="cars"> Car Brands:</label>
-		<select required id="cars">
-		<option>--Please choose an option--</option>
-		<option>BMW</option>
-		<option>Swift</option>
-		<option>Maruti</option>
-		</select><br>
-		
+        <label for="cars">Car Brands:</label>
+        <select id="cars" name="cars" required>
+            <option value="" disabled selected>--Please choose an option--</option>
+            <option value="bmw">BMW</option>
+            <option value="swift">Swift</option>
+            <option value="maruti">Maruti</option>
+        </select><br>
 
-		<label for="age">Age:</label>
-		<input type="number" required id="age" placeholder="Age"><br>
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age" required placeholder="Age"><br>
 
-		<label for="dob">DOB:</label>
-		<input type="date" required id="dob"><br>
+        <label for="dob">DOB:</label>
+        <input type="date" id="dob" name="dob" required><br>
 
-		<label for="tel">Phone Number:</label>
-		<input type="tel" id="tel"><br>
+        <label for="tel">Phone Number:</label>
+        <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx"><br>
 
-		<label for="pssword">Password:</label>
-		<input type="password" id="password" required placeholder="Password"><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required placeholder="Password"><br>
 
-		<label for="tos">I agree to the TOS</label>
-		<input type="checkbox" required id="tos"><br>
+        <label for="tos">I agree to the TOS</label>
+        <input type="checkbox" id="tos" name="tos" required><br>
 
-		<button type="submit">Submit</button>
-		
-	</form>
+        <button type="submit">Submit</button>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
